--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv-webpack": "^1.5.7",
     "google-maps-react": "^2.0.2",
     "leaflet": "^1.3.4",
     "react": "^16.6.0",
