--- a/.gitignore
+++ b/.gitignore
@@ -111,6 +111,7 @@ typings/
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea
 
 # Generated files
 .idea/**/contentModel.xml
