--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
     "leaflet": "^1.3.4",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-geolocated": "^2.4.0",
     "react-leaflet": "^2.1.1",
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^9.2.1",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.1.5",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
